--- a/drillvideos.html
+++ b/drillvideos.html
@@ -16,10 +16,10 @@
     </nav>
     <br>
     <center>
-      <iframe id="part1drill" width="700" height="390" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <iframe id="part2drill" width="700" height="390" src="https://www.youtube.com/embed/j0Epiavh9uw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
-      <iframe id="part3drill" width="700" height="390" src="https://www.youtube.com/embed/HWGhjazvBmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <iframe id="part4drill" width="700" height="390" src="https://www.youtube.com/embed/E7TcJD5QII8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe id="part2drill" class="drillvid" src="https://www.youtube.com/embed/j0Epiavh9uw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
+      <iframe id="part3drill" class="drillvid" src="https://www.youtube.com/embed/HWGhjazvBmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </center><br>
 </body>
 
