--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico" />
     <meta charset="utf-8">
+    <script type="text/javascript" src="script/index.js">
+
+    </script>
 </head>
 
 <body>
