--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,7 @@
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="https://www.ucvts.tec.nj.us/cms/lib/NJ03001805/Centricity/Domain/4/favicon.ico" />
     <meta charset="utf-8">
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="script/index.js"></script>
 </head>
 
 <body>
