--- a/drillvideos.html
+++ b/drillvideos.html
@@ -11,6 +11,7 @@
 
 <body>
     <nav>
+      <!-- test -->
       <a class="item" href="index.html">Home</a>
       <a class="item" href="calendar.html">Calendar</a>
       <a id="selected" href="drillvideos.html">Drill Videos</a>
