--- a/calendar.html
+++ b/calendar.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
-    <a href="calendar.html">Calendar</a>
+    <a href="index.html">Home</a>
+    <a href="calendar.html" class="active">Calendar</a>
     <a href="drillvideos.html">Drill Videos</a>
     <div class="dropdown">
       <button class="dropbtn">Dropdown
