--- a/drillvideos.html
+++ b/drillvideos.html
@@ -11,9 +11,9 @@
 
 <body>
   <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
+    <a href="index.html">Home</a>
     <a href="calendar.html">Calendar</a>
-    <a href="drillvideos.html">Drill Videos</a>
+    <a href="drillvideos.html" class="active">Drill Videos</a>
     <div class="dropdown">
       <button class="dropbtn">Dropdown
         <i class="fa fa-caret-down"></i>
