--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#">Link 3</a>
       </div>
     </div>
-    <a href="#about">About</a>
+    <a href="scroll.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
     <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
