--- a/drillvideos.html
+++ b/drillvideos.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
+  <nav class="topnav" id="myTopnav">
+    <a href="index.html" class="active">Home</a>
     <a href="calendar.html">Calendar</a>
-    <a href="drillvideos.html" class="active">Drill Videos</a>
+    <a href="drillvideos.html">Drill Videos</a>
     <div class="dropdown">
       <button class="dropbtn">Dropdown
         <i class="fa fa-caret-down"></i>
@@ -23,9 +23,8 @@
         <a href="#">Link 3</a>
       </div>
     </div>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-  </div>
+    <a href="scroll.html">Scroll</a>
+  </nav>
     <br>
     <center>
       <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
