--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="topnav" id="myTopnav">
+  <nav class="topnav" id="myTopnav">
     <a href="index.html" class="active">Home</a>
     <a href="calendar.html">Calendar</a>
     <a href="drillvideos.html">Drill Videos</a>
@@ -23,9 +23,8 @@
         <a href="#">Link 3</a>
       </div>
     </div>
-    <a href="scroll.html">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-  </div>
+    <a href="scroll.html">Scroll</a>
+  </nav>
     <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
     <iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe><br>
 </body>
