--- a/calendar.html
+++ b/calendar.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="calendar.html" class="active">Calendar</a>
+  <nav class="topnav" id="myTopnav">
+    <a href="index.html" class="active">Home</a>
+    <a href="calendar.html">Calendar</a>
     <a href="drillvideos.html">Drill Videos</a>
     <div class="dropdown">
       <button class="dropbtn">Dropdown
@@ -23,8 +23,8 @@
         <a href="#">Link 3</a>
       </div>
     </div>
-    <a href="#about">About</a>
-  </div>
+    <a href="scroll.html">Scroll</a>
+  </nav>
     <br><br>
     <center><iframe id="calendar-widget" allowtransparency="true" style="border-width:0" width="788" height="700" frameborder="0" scrolling="no" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></center><br>
 </body>
