--- a/calendar.html
+++ b/calendar.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <nav>
-      <a class="item" href="index.html">Home</a>
-      <a id="selected" href="calendar.html">Calendar</a>
-      <a class="item" href="drillvideos.html">Drill Videos</a>
-    </nav>
+  <div class="topnav" id="myTopnav">
+<a href="index.html" class="active">Home</a>
+<a href="calendar.html">Calendar</a>
+<a href="drill.html">Drill</a>
+<a href="#about">About</a>
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
     <br><br>
     <center><iframe id="calendar-widget" allowtransparency="true" style="border-width:0" width="788" height="700" frameborder="0" scrolling="no" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></center><br>
 </body>
