--- a/drill.html
+++ b/drill.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <nav>
-      <a class="item" href="index.html">Home</a>
-      <a class="item" href="calendar.html">Calendar</a>
-      <a id="selected" href="drillvideos.html">Drill Videos</a>
-    </nav>
+  <div class="topnav" id="myTopnav">
+<a href="index.html" class="active">Home</a>
+<a href="calendar.html">Calendar</a>
+<a href="drill.html">Drill</a>
+<a href="#about">About</a>
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
     <br>
     <center>
       <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
