--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="topnav" id="myTopnav">
   <a href="index.html"  class="active">Home</a>
   <a href="calendar.html">Calendar</a>
-  <a href="drillvideos.html">Drill</a>
+  <a href="drill.html">Drill</a>
 </nav>
     <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
     <iframe id="remind-widget" title="Remind Messages" alt="Remind Messages"src="https://widgets.remind.com/widget?height=500&join=true&token=f9d9faa031ef013642500242ac110002"></iframe><br>
