--- a/scroll.html
+++ b/scroll.html
@@ -1,9 +1,18 @@
-
 <nav class="topnav" id="myTopnav">
-  <a href="index.html">Home</a>
+  <a href="index.html" class="active">Home</a>
   <a href="calendar.html">Calendar</a>
-  <a href="drill.html">Drill Videos</a>
-  <a href="scroll.html" class="active">Scroll</a>
+  <a href="drillvideos.html">Drill Videos</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+  <a href="scroll.html">Scroll</a>
 </nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
 
