--- a/drill.html
+++ b/drill.html
@@ -14,6 +14,7 @@
   <a href="index.html">Home</a>
   <a href="calendar.html">Calendar</a>
   <a href="drill.html" class="active">Drill</a>
+  <a href="scroll.html">Scroll</a>
 </nav>
     <br>
     <center>
