fixing the navabar again

--- a/scroll.html
+++ b/scroll.html
@@ -1,7 +1,7 @@
 <nav class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
   <a href="calendar.html">Calendar</a>
-  <a href="drillvideos.html">Drill Videos</a>
+  <a href="drill.html">Drill</a>
   <a href="scroll.html" class="active">Scroll</a>
 </nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
