changing headers in scroll

--- a/scroll.html
+++ b/scroll.html
@@ -8,12 +8,12 @@
 
 <main class="wrapper">
   <section class="section parallax bg1">
-    <h1>Such Adorableness</hi>
+    <h1>Section 1</hi>
   </section>
   <section class="section static">
     <h1>Boring</h1>
   </section>
   <section class="section parallax bg2">
-    <h1>SO CUTE AWWW</hi>
+    <h1>Section 2</hi>
   </section>
 </main>
