- added parallax.css - moved parallax code to parallax.css

--- a/scroll.html
+++ b/scroll.html
@@ -5,6 +5,7 @@
   <a href="scroll.html" class="active">Scroll</a>
 </nav>
 <link href="styles/index.css" rel="stylesheet" type="text/css" />
+<link href="styles/parallax.css" rel="stylesheet" type="text/css" />
 
 <main class="wrapper">
   <section class="section parallax bg1">
