added drill dropdown 1

--- a/drill.html
+++ b/drill.html
@@ -23,6 +23,25 @@
       <iframe id="part3drill" class="drillvid" src="https://www.youtube.com/embed/HWGhjazvBmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </center><br>
+    <h2>Drill Sheets</h2>
+    <h4>section</h4>
+    <select>
+      <option value="A">Base Clanent</option>
+      <option value="B">Baratone</option>
+      <option value="C">Clarenet</option>
+      <option value="F">Flute</option>
+      <option value="G">Guard</option>
+      <option value="M">Mellophone</option>
+      <option value="N">Tenor Sax</option>
+      <option value="O">Bass Drum</option>
+      <option value="Q">Quints</option>
+      <option value="R">Trombone</option>
+      <option value="S">Alto Sax</option>
+      <option value="T">Trumpet</option>
+      <option value="U">Tuba</option>
+      <option value="Y">Cymbals</option>
+      <option value="Z">Snares</option>
+</select>
 </body>
 
 </html>
