--- a/drill.html
+++ b/drill.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-
-<nav class="topnav" id="myTopnav">
-  <a href="index.html">Home</a>
-  <a href="calendar.html">Calendar</a>
-  <a href="drill.html" class="active">Drill</a>
-  <a href="scroll.html">Scroll</a>
-</nav>
+  <nav class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="calendar.html">Information</a>
+    <a href="brass.html">Brass</a>
+    <a href="woodwinds.html">Woodwinds</a>
+    <a href="drumline.html">Drumline</a>
+    <a href="guard.html">Guard</a>
+    <a href="drill.html" class="active">Drill</a>
+    <a href="scroll.html">Scroll</a>
+  </nav>
     <br>
     <center>
       <iframe id="part1drill" class="drillvid" src="https://www.youtube.com/embed/ZTqo3iOXdmQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
