--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,11 @@
 <body>
   <nav class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="calendar.html" class="active">Calendar</a>
+    <a href="calendar.html" class="active">Information</a>
+    <a href="brass.html">Brass</a>
+    <a href="woodwinds.html">Woodwinds</a>
+    <a href="drumline.html">Drumline</a>
+    <a href="guard.html">Guard</a>
     <a href="drill.html">Drill</a>
     <a href="scroll.html">Scroll</a>
   </nav>
