--- a/index0.html
+++ b/index0.html
@@ -11,11 +11,7 @@
 <body>
 <nav class="topnav" id="myTopnav">
   <a href="index.html"  class="active">Home</a>
-  <a href="calendar.html">Information</a>
-  <a href="brass.html">Brass</a>
-  <a href="woodwinds.html">Woodwinds</a>
-  <a href="drumline.html">Drumline</a>
-  <a href="guard.html">Guard</a>
+  <a href="calendar.html">Calendar</a>
   <a href="drill.html">Drill</a>
   <a href="scroll.html">Scroll</a>
 </nav>
