added instument dropdown an some js for drill search

--- a/drill.html
+++ b/drill.html
@@ -25,7 +25,7 @@
     </center><br>
     <h2>Drill Sheets</h2>
     <h4>section</h4>
-    <select>
+    <select id="instrument" >
       <option value="A">Base Clanent</option>
       <option value="B">Baratone</option>
       <option value="C">Clarenet</option>
@@ -42,6 +42,7 @@
       <option value="Y">Cymbals</option>
       <option value="Z">Snares</option>
 </select>
+<button type="button" onclick="test()" name="button">Search</button>
 </body>
 
 </html>
