--- a/calendar.html
+++ b/calendar.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <nav class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="calendar.html" class="active">Information</a>
-    <a href="drill.html">Drill</a>
-    <a href="brass.html">Brass</a>
-    <a href="woodwinds.html">Woodwinds</a>
-    <a href="drumline.html">Drumline</a>
-    <a href="guard.html">Guard</a>
-    <a href="scroll.html">Scroll</a>
+  <nav>
+    <a id="selected" href="index.html">Home</a>
+    <a class="item" href="calendar.html">Information</a>
+    <a class="item" href="drill.html">Drill</a>
+    <a class="item"a href="brass.html">Brass</a>
+    <a class="item" href="woodwinds.html">Woodwinds</a>
+    <a class="item" href="drumline.html">Drumline</a>
+    <a class="item" href="guard.html">Guard</a>
+    <a class="item" href="scroll.html">Scroll</a>
   </nav>
     <br><br>
     <center><iframe id="calendar-widget" allowtransparency="true" style="border-width:0" width="788" height="700" frameborder="0" scrolling="no" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></center><br>
