--- a/drill.html
+++ b/drill.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <nav class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="calendar.html">Information</a>
-    <a href="drill.html" class="active">Drill</a>
-    <a href="brass.html">Brass</a>
-    <a href="woodwinds.html">Woodwinds</a>
-    <a href="drumline.html">Drumline</a>
-    <a href="guard.html">Guard</a>
-    <a href="scroll.html">Scroll</a>
+  <nav>
+    <a id="selected" href="index.html">Home</a>
+    <a class="item" href="calendar.html">Information</a>
+    <a class="item" href="drill.html">Drill</a>
+    <a class="item"a href="brass.html">Brass</a>
+    <a class="item" href="woodwinds.html">Woodwinds</a>
+    <a class="item" href="drumline.html">Drumline</a>
+    <a class="item" href="guard.html">Guard</a>
+    <a class="item" href="scroll.html">Scroll</a>
   </nav>
     <br>
     <center>
