--- a/woodwinds.html
+++ b/woodwinds.html
@@ -10,11 +10,11 @@
 
 <body>
   <nav>
-    <a id="selected" href="index.html">Home</a>
+    <a class="item" href="index.html">Home</a>
     <a class="item" href="calendar.html">Information</a>
     <a class="item" href="drill.html">Drill</a>
-    <a class="item"a href="brass.html">Brass</a>
-    <a class="item" href="woodwinds.html">Woodwinds</a>
+    <a class="item" href="brass.html">Brass</a>
+    <a id="selected" href="woodwinds.html">Woodwinds</a>
     <a class="item" href="drumline.html">Drumline</a>
     <a class="item" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
