moved <script> tags for faster page loading

--- a/drill.html
+++ b/drill.html
@@ -49,5 +49,5 @@
 <button type="button" onclick="download()" id="link" name="button">Search</button>
 <iframe id="my_iframe" style="display:none;">
 </body>
-
+<script type="text/javascript" src="script/index.js"></script>
 </html>
