--- a/brass.html
+++ b/brass.html
@@ -19,5 +19,6 @@
     <a class="item" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
   </nav>
-
+</body>
+<script type="text/javascript" src="script/index.js"></script>
 </html>
