--- a/calendar.html
+++ b/calendar.html
@@ -22,5 +22,5 @@
     <br><br>
     <center><iframe id="calendar-widget" allowtransparency="true" style="border-width:0" width="788" height="700" frameborder="0" scrolling="no" title="Calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&amp;bgcolor=%23ffffff&src=npsdnj.org_9j33fgccfi11a9mq82351tq32k%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"></iframe></center><br>
 </body>
-
+<script type="text/javascript" src="script/index.js"></script>
 </html>
