--- a/woodwinds.html
+++ b/woodwinds.html
@@ -19,5 +19,5 @@
     <a class="item" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
   </nav>
-
+<script type="text/javascript" src="script/index.js"></script>
 </html>
