make navbar good ok?

--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <a class="item" href="index.html">Home</a>
-    <a id="selected" href="calendar.html">Information</a>
+    <a class="active" href="calendar.html">Information</a>
     <a class="item" href="drill.html">Drill</a>
     <a class="item" href="brass.html">Brass</a>
     <a class="item" href="woodwinds.html">Woodwinds</a>
