--- a/drill.html
+++ b/drill.html
@@ -13,7 +13,7 @@
   <nav>
     <a class="item" href="index.html">Home</a>
     <a class="item" href="calendar.html">Information</a>
-    <a id="selected" href="drill.html">Drill</a>
+    <a class="active" href="drill.html">Drill</a>
     <a class="item" href="brass.html">Brass</a>
     <a class="item" href="woodwinds.html">Woodwinds</a>
     <a class="item" href="drumline.html">Drumline</a>
