--- a/guard.html
+++ b/guard.html
@@ -16,7 +16,7 @@
     <a class="item" href="brass.html">Brass</a>
     <a class="item" href="woodwinds.html">Woodwinds</a>
     <a class="item" href="drumline.html">Drumline</a>
-    <a id="selected" href="guard.html">Guard</a>
+    <a class="active" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
   </nav>
 <script type="text/javascript" src="script/index.js"></script>
