--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <nav>
-    <a id="selected" href="index.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a class="item" href="calendar.html">Information</a>
     <a class="item" href="drill.html">Drill</a>
     <a class="item" href="brass.html">Brass</a>
