--- a/brass.html
+++ b/brass.html
@@ -13,7 +13,7 @@
     <a class="item" href="index.html">Home</a>
     <a class="item" href="calendar.html">Information</a>
     <a class="item" href="drill.html">Drill</a>
-    <a id="selected" href="brass.html">Brass</a>
+    <a class="active" href="brass.html">Brass</a>
     <a class="item" href="woodwinds.html">Woodwinds</a>
     <a class="item" href="drumline.html">Drumline</a>
     <a class="item" href="guard.html">Guard</a>
