--- a/drumline.html
+++ b/drumline.html
@@ -15,7 +15,7 @@
     <a class="item" href="drill.html">Drill</a>
     <a class="item" href="brass.html">Brass</a>
     <a class="item" href="woodwinds.html">Woodwinds</a>
-    <a id="selected" href="drumline.html">Drumline</a>
+    <a class="active" href="drumline.html">Drumline</a>
     <a class="item" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
   </nav>
