--- a/woodwinds.html
+++ b/woodwinds.html
@@ -14,7 +14,7 @@
     <a class="item" href="calendar.html">Information</a>
     <a class="item" href="drill.html">Drill</a>
     <a class="item" href="brass.html">Brass</a>
-    <a id="selected" href="woodwinds.html">Woodwinds</a>
+    <a class="active" href="woodwinds.html">Woodwinds</a>
     <a class="item" href="drumline.html">Drumline</a>
     <a class="item" href="guard.html">Guard</a>
     <a class="item" href="scroll.html">Scroll</a>
