drill download js

--- a/drill.html
+++ b/drill.html
@@ -46,8 +46,13 @@
       <option value="Y">Cymbals</option>
       <option value="Z">Snares</option>
 </select>
-<button type="button" onclick="download()" id="link" name="button">Search</button>
+<input type="text" name="" placeholder="enter your drill number" id="number" value="">
+<button type="button" onclick="test()" id="link" name="button">Search</button>
+<br>
+<br>
+<br>
+<br>
+<br>
 <iframe id="my_iframe" style="display:none;">
 </body>
-<script type="text/javascript" src="script/index.js"></script>
 </html>
