--- a/drill.html
+++ b/drill.html
@@ -29,8 +29,10 @@
       <iframe id="part3drill" class="drillvid" src="https://www.youtube.com/embed/HWGhjazvBmA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <iframe id="part4drill" class="drillvid" src="https://www.youtube.com/embed/E7TcJD5QII8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </center><br>
+    <div id="drillselect">
+    <center><div id="selector">
     <h2>Drill Sheets</h2>
-    <h4>section</h4>
+    <h4>Section</h4>
     <select id="instrument" >
       <option value="A">Base Clanent</option>
       <option value="B">Baratone</option>
@@ -56,5 +58,7 @@
 <br>
 <br>
 <iframe id="my_iframe" style="display:none;">
+</div></center>
+</div>
 </body>
 </html>
