--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 
 <body>
-  <div>
+  <nav>
     <ul class="topnav">
-    <li class="topnavli"><a class="active" href="index.html">Home</a></li>
-    <li class="topnavli"><a class="item" href="calendar.html">Information</a></li>
-    <li class="topnavli"><a class="item" href="drill.html">Drill</a></li>
-    <li class="topnavli"><a class="item" href="brass.html">Brass</a></li>
-    <li class="topnavli"><a class="item" href="woodwinds.html">Woodwinds</a></li>
-    <li class="topnavli"><a class="item" href="drumline.html">Drumline</a></li>
-    <li class="topnavli"><a class="item" href="guard.html">Guard</a></li>
-    <li class="topnavli"><a class="item" href="scroll.html">Scroll</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="calendar.html">Information</a></li>
+    <li><a href="drill.html">Drill</a></li>
+    <li><a href="brass.html">Brass</a></li>
+    <li><a href="woodwinds.html">Woodwinds</a></li>
+    <li><a href="drumline.html">Drumline</a></li>
+    <li><a href="guard.html">Guard</a></li>
+    <li><a href="scroll.html">Scroll</a></li>
   </ul>
-</div>
+</nav>
 <br>
     <center><img id="classyheader" title="NPMB Header Image" alt="NPMB Header Image" src="https://www.npsd.k12.nj.us/cms/lib/NJ01001216/Centricity/Domain/155/max.jpg"></center><br>
     <div class="head">
